Fix height of home page landing text on smaller devices

--- a/graph-visualizer/src/modules/Home/responsive.css
+++ b/graph-visualizer/src/modules/Home/responsive.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 576px) {
     section.start {
-        height: 500px;
+        height: 550px;
         width: 100vw;
 
         padding-top: 50px;
